--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "build": "tsc -b && vite build",
     "transpile": "tsc -b",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.10.5",
@@ -39,7 +37,6 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "gh-pages": "^6.3.0",
     "typescript": "^5.7.3",
     "vite": "^6.0.7"
   }
