--- a/package.json
+++ b/package.json
@@ -16,21 +16,26 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@highcharts/react": "^4.0.0-beta.5",
+    "@react-three/fiber": "^9.4.0",
     "@tanstack/react-table": "^8.21.2",
+    "@types/p5": "^1.7.7",
     "@vitejs/plugin-react": "^4.3.4",
     "framer-motion": "^12.0.6",
     "nuqs": "^2.3.2",
+    "p5": "^2.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "recharts": "^3.2.1",
-    "styled-components": "^6.1.15"
+    "styled-components": "^6.1.15",
+    "three": "^0.181.0"
   },
   "devDependencies": {
     "@types/css": "^0.0.38",
     "@types/node": "^22.10.6",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
+    "@types/three": "^0.181.0",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
     "eslint": "^9.18.0",
